# CraftEngine

./: CMakeLists.txt  README.md  main.cpp
src/: App.cpp  App.h  utils.hpp  vk_device_abstraction.cpp  vk_device_abstraction.h  vk_graphic_device.cpp  vk_graphic_device.h  vk_instance.cpp  vk_instance.h  vk_renderer.cpp  vk_renderer.h  vk_window.cpp  vk_window.h  window.cpp  window.h
src/core/: App.cpp  App.h  vk_instance.cpp  vk_instance.h
src/debug/: log.h  time.cpp  time.h
src/gameObjects/: entitiesExtencions.cpp  entitiesExtencions.h  entity.cpp  entity.h  extencionsLabels.h
src/gpu/: mesh.cpp  mesh.h  texture.cpp  texture.h  vk_buffer.cpp  vk_buffer.h  vk_device_abstraction.cpp  vk_device_abstraction.h  vk_graphic_device.cpp  vk_graphic_device.h  vk_shader.cpp  vk_shader.h
src/input/: input.cpp  input.h  keyCodes.h
src/rendered/: camera.cpp  camera.h  ebo.cpp  ebo.h  imageUtils.hpp  mesh.cpp  mesh.h  vao.cpp  vao.h  vertex.cpp  vertex.h  vk_instance.h  vk_renderer.cpp  vk_renderer.h  vk_window.cpp  vk_window.h
src/shaders/: compile_Spir_V.cpp  compile_Spir_V.h
src/shaders/compiled/: frag.spv  vert.spv
src/shaders/frags/: basic_frag.frag
src/shaders/verts/: basic_vert.vert
src/utils/: frameRate.cpp  frameRate.h  utils.hpp
